<resources>

    <string name="facebook_app_id" translatable="false">290556735184985</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb290556735184985</string>
    <string name="app_name">HospitalApp</string>
    <string name="android_task">Android \n Task</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">sign up</string>
    <string name="forget_password">forget Password?</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="or">OR</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="re_password">Re-Password</string>
    <string name="mail">Mail</string>
    <string name="mobile">Mobile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string-array name="array_operation_type">
        <item>Withdrawal</item>
        <item>Deposit</item>
        <item>Request</item>
    </string-array>

    <string-array name="array_blood_bags_number">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="current_position">Current Position</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="ok">Ok</string>
    <string name="do_you_want_to_access_contacts">Do You Want To Access Contacts?</string>
    <string name="can_t_access_your_contacts">Can\'t Access your Contacts</string>
    <string name="error">Error</string>
    <string name="search">Search</string>
    <string name="choose_image_method">Choose Image Method</string>
    <string name="take_a_picture">take a picture</string>
    <string name="remember_me">Remember Me</string>
    <string name="address" translatable="false">   Address</string>
</resources>
