<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />

            <com.example.hospitalapp.Utills.MyTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_20ssp" />

            <com.example.hospitalapp.Utills.MyEditText
                android:id="@+id/name_text_view"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10_height"
                android:layout_marginTop="@dimen/_16ssp"
                android:layout_marginEnd="@dimen/_10_height"
                android:layout_marginBottom="@dimen/_10_height"
                android:drawableStart="@drawable/name"
                android:hint="Hospital Name"
                android:inputType="text" />


            <com.example.hospitalapp.Utills.MyEditText
                android:id="@+id/password_edit_text"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10_height"
                android:drawableStart="@drawable/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="viewStart" />

            <com.example.hospitalapp.Utills.MyEditText
                android:id="@+id/confirm_password_text_view"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10_height"
                android:drawableStart="@drawable/password"
                android:hint="@string/re_password"
                android:inputType="textPassword"
                android:textAlignment="viewStart" />


            <com.example.hospitalapp.Utills.MyEditText
                android:id="@+id/mobile_text_view"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10_height"
                android:drawableStart="@drawable/phone"
                android:hint="@string/mobile"
                android:inputType="phone" />
            <com.example.hospitalapp.Utills.MyEditText
                android:id="@+id/address_text_view"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10_height"
                android:hint="@string/address"
                 />
            <com.example.hospitalapp.Utills.MyTextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="@dimen/_10sdp"
                android:text="Governorate:"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_11ssp" />


            <Spinner
                android:id="@+id/spinner_governorate"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="?attr/dropdownListPreferredItemHeight"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp" />

            <com.example.hospitalapp.Utills.ButtonBold
                android:id="@+id/sign_up_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10_height"
                android:background="@drawable/shape_login_background"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_15sdp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>